package Command;

public interface Command {
	void castSkill();
}
